--- a/main.css
+++ b/main.css
@@ -5,3 +5,16 @@ html {
   .card-text{
     height: 5vh;
   }
+
+  .carousel-item {
+    position: relative;
+    text-align: center;
+  }
+
+  .centered {
+    position: absolute;
+    top: 20%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    font-size: 3vw;
+  }
