Lade till information och popovers.

--- a/main.css
+++ b/main.css
@@ -22,3 +22,7 @@ html {
 .accordion a{
   color: black;
 }
+
+.jumbotron{ /*removes the bottom margin of the jumbotron component*/
+  margin-bottom: 0rem;
+}
