--- a/main.css
+++ b/main.css
@@ -11,12 +11,18 @@ html {
     text-align: center;
   }
 
-  .centered {
+  .toastAlignedRight {
     position: absolute;
     top: 20%;
     left: 80%;
-    transform: translate(-50%, -50%);
-    font-size: 3vw;
+    transform: translate(-80%, -50%);
+  }
+
+  .toastAlignedLeft{
+    position: absolute;
+    top: 20%;
+    left: 80%;
+    transform: translate(-80%, -50%);
   }
 
 .accordion a{
